# py-sci-proj-template

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: run_flake8.yaml  run_pytest.yaml
conda/: README.md  environment.yaml
docs/: Git Routines.md  Git Rutines.md  Visual Studio Code Setup.md
py_src/: README.md
py_src/data_obj/: README.md  data.py  utils.py
py_src/param/: Parameters.yaml  README.md  __init__.py  dict2obj.py
py_src/tasks/: README.md  __init__.py  task1.py
scripts/: README.md  run-integration-test.sh
tests/: README.md
tests/data/: README.md
tests/tasks/: test_task1.py
