[metadata]
name = python-sci-project-template
description = A template python project for scientific software development.
# author = author's name
# url = https://github.com/???

[options]
zip_safe = True
package_dir=
    =py_src
packages = find:
scripts =
    scripts/run-integration-test.sh
python_requires = >=3.9.7
setup_requires =
    setuptools >=46.4.0
install_requires =
    astropy >=4.0
    numpy >=1.21.4
    alive-progress
    click >7.0,<8.0
    healpy >=1.15.0
    scipy >=1.6
    # pex_config @ git+https://github.com/lsst/pex_config@main
[options.extras_require]
tests=
    pytest >= 3.2
    flake8 >= 3.7.5
    pytest-flake8 >= 1.0.4
    pytest-openfiles >= 0.5.0

[options.packages.find]
where = py_src

[options.package_data]
param = *.yaml

[flake8]
max-line-length = 110
max-doc-length = 88
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude = __init__.py

[tool:pytest]
addopts = --flake8 --ignore=tools/template/
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503

# Example to ignore open files at the end of unit test
# open_files_ignore = "gen3.sqlite3"